# daisuke8000_coral

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  action.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  example-pages-deploy.yml  example-pr-analysis.yml  release-binary.yml  release-drafter.yml
src/: analyzer.rs  diff.rs  error.rs  lib.rs  main.rs  reporter.rs  server.rs
src/analyzer/: core.rs  edge_builder.rs  mod.rs  node_builder.rs  tests.rs  util.rs
src/diff/: core.rs  markdown.rs  mod.rs  tests.rs
src/domain/: graph.rs  mod.rs  node.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: index.css
ui/src/components/: Graph.tsx
ui/src/hooks/: useAutoLayout.ts
