[package]
name = "coral"
version = "0.2.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/daisuke8000/coral"
description = "A CLI tool to visualize .proto file dependencies from gRPC/Connect projects"

[dependencies]
# Protobuf
prost = "0.14"
prost-types = "0.14"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "signal"] }

# Web server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }